fixed the broken css again

--- a/source/stylesheets/features/us-healthcare.css.scss
+++ b/source/stylesheets/features/us-healthcare.css.scss
@@ -6,11 +6,20 @@ $black : #000;
 $dark-blue: #004363;
 $light-blue:#6496c8;
 
+.jumbotron {
+  color: white;
+  height: 600px;
+  background-image: url("https://farm6.staticflickr.com/5473/11383979236_97370fc858_o.jpg"); 
+  background-size: cover;
+  text-shadow: 1px 1px black;
+  padding-top: 200px;
+}
+
 header p{
   text-align: center;
 }
 
-h1 {
+.jumbotron h1 {
     text-align: center;
 }
 
@@ -42,18 +51,6 @@ a {
 
 h3 {
     text-align: center;
-}
-
-.jumbotron {
-  color: white;
-  height: 600px;
-  background-image: url("https://farm6.staticflickr.com/5473/11383979236_97370fc858_o.jpg"); 
-  background-size: cover;
-/*
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: black;
-*/
-  text-shadow: 2px 2px black;
 }
 
 /* TABLE */
